[gd_scene load_steps=21 format=3 uid="uid://vogdpnv72pdg"]

[ext_resource type="Script" path="res://scenes/entities/slime.gd" id="1_802xd"]
[ext_resource type="Texture2D" uid="uid://ckcinl0bym0qr" path="res://assets/sprites/entities/slime/Slime Sprite Sheet.png" id="1_rlcjx"]
[ext_resource type="Script" path="res://scenes/entities/damageable.gd" id="2_cyo14"]
[ext_resource type="Script" path="res://scenes/entities/player_state_machine.gd" id="3_gu5ss"]
[ext_resource type="Script" path="res://scenes/entities/state.gd" id="4_w6jvl"]
[ext_resource type="Script" path="res://scenes/entities/hit_state.gd" id="6_48d2o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tird"]
size = Vector2(12, 9)

[sub_resource type="Animation" id="Animation_n0jxb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rlcjx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_4pslh"]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rlcjx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4)]
}

[sub_resource type="Animation" id="Animation_icycs"]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_5l2lg"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rlcjx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thdsb"]
_data = {
"RESET": SubResource("Animation_n0jxb"),
"death": SubResource("Animation_4pslh"),
"hit": SubResource("Animation_icycs"),
"walk": SubResource("Animation_5l2lg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o41or"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h8yjg"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cro6g"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cixc1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w55qt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cvktb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_byvvc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qat5d"]
states/death/node = SubResource("AnimationNodeAnimation_o41or")
states/death/position = Vector2(564.667, 91.3333)
states/hit/node = SubResource("AnimationNodeAnimation_h8yjg")
states/hit/position = Vector2(428, 188.667)
states/walk/node = SubResource("AnimationNodeAnimation_cro6g")
states/walk/position = Vector2(373.333, 92)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_cixc1"), "walk", "death", SubResource("AnimationNodeStateMachineTransition_w55qt"), "walk", "hit", SubResource("AnimationNodeStateMachineTransition_cvktb"), "hit", "walk", SubResource("AnimationNodeStateMachineTransition_byvvc")]
graph_offset = Vector2(-163.53, -30.6)

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("hit_state")]
scale = Vector2(7, 7)
collision_layer = 4
script = ExtResource("1_802xd")
hit_state = NodePath("PlayerStateMachine/Hit")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rlcjx")
hframes = 8
vframes = 5
frame = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11.5)
shape = SubResource("RectangleShape2D_7tird")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_thdsb")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_thdsb")
}
tree_root = SubResource("AnimationNodeStateMachine_qat5d")
anim_player = NodePath("../AnimationPlayer")

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-6, 15)
target_position = Vector2(0, 41)

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2(6, 15)
target_position = Vector2(0, 41)

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_cyo14")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "character", "animation_tree")]
script = ExtResource("3_gu5ss")
current_state = NodePath("Walk")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")

[node name="Walk" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_w6jvl")

[node name="Dead" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_w6jvl")
can_move = false

[node name="Hit" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("damageable", "playerStateMachine", "dead_state", "return_state")]
script = ExtResource("6_48d2o")
damageable = NodePath("../../Damageable")
playerStateMachine = NodePath("..")
dead_state = NodePath("../Dead")
return_state = NodePath("../Walk")
can_move = false

[node name="Timer" type="Timer" parent="PlayerStateMachine/Hit"]
wait_time = 0.25
one_shot = true

[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="PlayerStateMachine/Hit/Timer" to="PlayerStateMachine/Hit" method="_on_timer_timeout"]
